--- a/index.css
+++ b/index.css
@@ -124,9 +124,9 @@ form button {
     transition: all 0.5s;
 }
 
-.thumbnail.expand {
-    width: 210px;
-    height: 210px;
+.thumbnail.thumbnail-border {
+    border: rgb(241, 241, 92) 3px solid;
+    box-shadow: none;
 }
 
 .thumbnail span {
@@ -168,10 +168,6 @@ section.lightbox div.inner-lightbox {
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: auto;
-}
-
-.lightbox-border {
-    border: 1px solid #20CDE0;
 }
 
 .lightbox-content {
